<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lost_title_label"
        />

    <EditText
        android:id="@+id/lost_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lost_title_hint"
        />
    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:text="@string/lost_details_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lost_report"
        android:text="@string/lost_report_text"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lost_suspect"
        android:text="@string/lost_suspect_text"
        />

    <Button
        android:id="@+id/lost_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <CheckBox
        android:id="@+id/lost_found"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lost_solved_label"
        />

</LinearLayout>

